force-app/main/default/objects/Tag__c/fields/Cliente_Fornitore__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Fornitore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente/Fornitore</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Fornitori, Fornitori, Account personale</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tags</relationshipLabel>
    <relationshipName>Tags</relationshipName>
    <type>Lookup</type>
</CustomField>