force-app/main/default/objects/Tag__c/fields/Social__c.field-meta.xml
<CustomField>
    <fullName>Social__c</fullName>
    <label>Social</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instagram</fullName>
                <default>true</default>
                <label>Instagram</label>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>TikTok</fullName>
            </value>
            <value>
                <fullName>WeChat</fullName>
            </value>
            <value>
                <fullName>Snapchat</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Youtube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>