force-app/main/default/objects/Tag__c/fields/Tipologia__c.field-meta.xml
<CustomField>
    <fullName>Tipologia__c</fullName>
    <label>Tipologia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client 1</fullName>
            </value>
            <value>
                <fullName>Client 2</fullName>
            </value>
            <value>
                <fullName>Wedding planner</fullName>
            </value>
            <value>
                <fullName>Venue</fullName>
            </value>
            <value>
                <fullName>DJ</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
            <value>
                <fullName>Videography</fullName>
            </value>
            <value>
                <fullName>Flowers</fullName>
            </value>
            <value>
                <fullName>MUA</fullName>
            </value>
            <value>
                <fullName>Hair</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Lights</fullName>
            </value>
            <value>
                <fullName>Artists</fullName>
            </value>
            <value>
                <fullName>Rentals</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>DJ Photography</fullName>
                <isActive>false</isActive>
                <label>DJ Photography</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>